--- a/Teams.html
+++ b/Teams.html
@@ -17,38 +17,42 @@
 	<div class="wrap">
 		<!-- nav就是一个导航标签 -->
 		<nav>
-			<ul class="menu">
-				<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
-				<li><a href="index.html"><span class="iconic plus-alt"></span> 研究方向</a></li>
-				<li><a href="#"><span class="iconic plus-alt"></span> 教师简介</a>
-					<ul>
-						<li><a href="files/caoyongfeng.pdf">曹永峰</a></li>
-						<li><a href="files/yanghua.pdf">杨华</a></li>
-					</ul>
+		<ul class="menu">
+			<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
+			<li><a href="#"><span class="iconic plus-alt"></span> 教师简介</a>
+				<ul>
+					<li><a href="files/caoyongfeng.pdf">曹永峰</a></li>
+					<li><a href="files/yanghua.pdf">杨华</a></li>
+				</ul>
+			</li>
+			<li><a href="ShareSpace.html"><span class="iconic magnifying-glass"></span> 讨论区</a>
+			</li>
+			<li><a href="#"><span class="iconic map-pin"></span>学生专区</a>
+				<ul>
+					<li><a href="#">宋金阳</a></li>
+					<li><a href="#">刘萍</a></li>
+					<li><a href="#">张巡</a></li>
+					<li><a href="#">汤鑫</a></li>
+					<li><a href="#">黎平</a></li>
+					<li><a href="#">王念洁</a></li>
+				</ul>
+			</li>
+			<li><a href="#"><span class="iconic arrow-right-alt"></span> 研究方向</a>
+				<ul>
+					<li><a href="PictureProcessing.html">图像处理</a></li>
+					<li><a href="wenzi.html">文字识别</a></li>
+				</ul>
+			</li>
+			<li><a href="ReasultShow.html"><span class="iconic move"></span> 成果展示</a>
+					
 				</li>
-				<li><a href="ShareSpace.html"><span class="iconic magnifying-glass"></span> 讨论区</a></li>
-				<li><a href="Teams.html"><span class="iconic map-pin"></span>人员</a>
-					<!-- <ul>
-						<li><a href="#">宋金阳</a></li>
-						<li><a href="#">刘萍</a></li>
-						<li><a href="#">张巡</a></li>
-						<li><a href="#">汤鑫</a></li>
-						<li><a href="#">黎平</a></li>
-						<li><a href="#">王念洁</a></li>
-					</ul>
-					 -->
-				</li>
-				<li><a href="#"><span class="iconic mail"></span> 成果展示</a>
-					<ul>
-						<li><a href="#">Contact Us</a></li>
-						<li><a href="#">Directions</a></li>
-					</ul>
-				</li>
-				<li><a href="PaperPublishing.html"><span class="iconic mail"></span> 论文发表</a>
-				<li><a href="news.html"><span class="iconic mail"></span> 新闻</a>
-				<li><a href="ContactUs.html"><span class="iconic mail"></span> 联系我们</a>
+				<li><a href="PaperPublishing.html"><span class="iconic pencil"></span> 论文发表</a>
+				<li><a href="news.html"><span class="iconic read-more"></span> 新闻</a>
+				<li><a href="ContactUs.html"><span class="iconic phone"></span> 联系我们</a>
 			</ul>
-			<div class="clearfix"></div>
+			
+		</ul>
+		<div class="clearfix" style ="z-index:-1"></div>
 	</nav>
 	</div>
 	
