--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
 			<li><a href="#"><span class="iconic plus-alt"></span> 教师简介</a>
 				<ul>
-					<li><a href="files/caoyongfeng.pdf">曹永峰</a></li>
+					<li><a href="CaoYongFeng.html">曹永峰</a></li>
 					<li><a href="files/yanghua.pdf">杨华</a></li>
 				</ul>
 			</li>
@@ -40,27 +40,28 @@
 					<li><a href="#">王念洁</a></li>
 				</ul>
 			</li>
-			<li><a href="ResearchArea.html"><span class="iconic mail"></span> 研究方向</a>
+			<li><a href="#"><span class="iconic arrow-right-alt"></span> 研究方向</a>
 				<ul>
-					<li><a href="#">图像处理</a></li>
-					<li><a href="#">文字识别</a></li>
+					<li><a href="PictureProcessing.html">图像处理</a></li>
+					<li><a href="wenzi.html">文字识别</a></li>
 				</ul>
 			</li>
-			<li><a href="ReasultShow.html"><span class="iconic mail"></span> 成果展示</a>
+			<li><a href="ReasultShow.html"><span class="iconic move"></span> 成果展示</a>
+					
 				</li>
-				<li><a href="PaperPublishing.html"><span class="iconic mail"></span> 论文发表</a>
-				<li><a href="news.html"><span class="iconic mail"></span> 新闻</a>
-				<li><a href="ContactUs.html"><span class="iconic mail"></span> 联系我们</a>
+				<li><a href="PaperPublishing.html"><span class="iconic pencil"></span> 论文发表</a>
+				<li><a href="news.html"><span class="iconic read-more"></span> 新闻</a>
+				<li><a href="ContactUs.html"><span class="iconic phone"></span> 联系我们</a>
 			</ul>
 			
-		
+		</ul>
 		<div class="clearfix" style ="z-index:-1"></div>
 	</nav>
 	</div>
 	<div class="main1" style = "height:500px;" >
 		<div class = "main11" style = "width:90%;margin-left: auto;margin-right: auto;">
 			<h1 style=" float:left;width:70%;font-family:楷体;text-align:left;font-size:20pt;position:relative;left:40px; ">云计算实验室简介</h1><br>
-			 <img src="img/shiyan.png" style="float:right;width:40%;position:relative;right:20px;height:380px"><br><br>
+			 <img src="img/shiyan.png" style="float:right;width:50%;position:relative;right:20px;height:380px"><br><br>
 			 <p style="text-indent:2em; float:left;width:40%;position:relative;left:15px;right:800px;">
 			 贵州师范大学云计算实验室隶属于大数据与计算机科学学院，汇集了一支包括
                 两名教授、六名研究生的科研团队。
