--- a/news.html
+++ b/news.html
@@ -42,17 +42,18 @@
 					<li><a href="#">王念洁</a></li>
 				</ul>
 			</li>
-			<li><a href="ResearchArea.html"><span class="iconic mail"></span> 研究方向</a>
+			<li><a href="#"><span class="iconic arrow-right-alt"></span> 研究方向</a>
 				<ul>
-					<li><a href="#">图像处理</a></li>
-					<li><a href="#">文字识别</a></li>
+					<li><a href="PictureProcessing.html">图像处理</a></li>
+					<li><a href="wenzi.html">文字识别</a></li>
 				</ul>
 			</li>
-			<li><a href="ReasultShow.html"><span class="iconic mail"></span> 成果展示</a>
+			<li><a href="ReasultShow.html"><span class="iconic move"></span> 成果展示</a>
+					
 				</li>
-				<li><a href="PaperPublishing.html"><span class="iconic mail"></span> 论文发表</a>
-				<li><a href="news.html"><span class="iconic mail"></span> 新闻</a>
-				<li><a href="ContactUs.html"><span class="iconic mail"></span> 联系我们</a>
+				<li><a href="PaperPublishing.html"><span class="iconic pencil"></span> 论文发表</a>
+				<li><a href="news.html"><span class="iconic read-more"></span> 新闻</a>
+				<li><a href="ContactUs.html"><span class="iconic phone"></span> 联系我们</a>
 			</ul>
 			
 		</ul>
