--- a/Teams.html
+++ b/Teams.html
@@ -21,7 +21,7 @@
 			<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
 			<li><a href="#"><span class="iconic plus-alt"></span> 教师简介</a>
 				<ul>
-					<li><a href="files/caoyongfeng.pdf">曹永峰</a></li>
+					<li><a href="CaoYongFeng.html">曹永峰</a></li>
 					<li><a href="files/yanghua.pdf">杨华</a></li>
 				</ul>
 			</li>
