--- a/TeacherTeam.html
+++ b/TeacherTeam.html
@@ -13,7 +13,7 @@
 <body>
 	
 	<div style = "position:relative;left:10%;top:50px;">
-		<font style = "font-family:楷体; font-size:40pt;">成果展示</font>
+		<font style = "font-family:楷体; font-size:40pt;">教师团队</font>
 	</div>
 
 
@@ -42,63 +42,40 @@
 	<div style = "height:600px;">
 		<div style = "height:80px">
 			<!-- 成果展示的图片 -->
-			<div style = "width:20%;position:relative;left:9%;float:left;">
-				<img src = "img/shiyan.png" style = "width:100px;float:left;">
+			<div style = "position:relative;left:9%;float:left;">
+				<img src = "img/CaoYongFeng.jpg" style = "width:100px;float:left;">
 			</div>
 			<!-- 对成果展示的说明 部分 -->
 			<div style = "width:80%;float:right;">
 				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
-				<a href = "#">数字图像处理</a></font>
+					<a href ="CaoYongFeng.html">曹永锋老师</a>
+				</font>
 				<br><br>
 				<p style = "text-indent:2em;line-height: 1;">
-					数学图像处理主要是由曹老师领队。
-					<br>
-					文字识别主要是由杨华老师领队。
+					曹永锋，男，1976 年 7 月生，博士，贵州师范大学数学与计算机科学学院，科研型教授，博导，硕导。
 				</p>
 			</div>
 		</div>
-			<br>
+			<br><br/><br>
 			<hr width = "88%">
 			
 			<div style = "height:80px">
 			<!-- 成果展示的图片 -->
-			<div style = "width:20%;position:relative;left:9%;float:left;">
-				<img src = "img/shiyan.png" style = "width:100px;float:left;">
+			<div style = "position:relative;left:9%;float:left;">
+				<img src = "#" style = "width:100px;float:left;">
 			</div>
 			<!-- 对成果展示的说明 部分 -->
 			<div style = "width:80%;float:right;">
 				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
-				<a href = "#">数字图像处理</a></font>
+				<a href = "#">杨华</a></font>
 				<br><br>
 				<p style = "text-indent:2em;line-height: 1;">
-					数学图像处理主要是由曹老师领队。
 					<br>
 					文字识别主要是由杨华老师领队。
 				</p>
 			</div>
 		</div>
-			<br>
-			<hr width = "88%">
-			
-			
-			<div style = "height:80px">
-			<!-- 成果展示的图片 -->
-			<div style = "width:20%;position:relative;left:9%;float:left;">
-				<img src = "img/shiyan.png" style = "width:100px;float:left;">
-			</div>
-			<!-- 对成果展示的说明 部分 -->
-			<div style = "width:80%;float:right;">
-				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
-				<a href = "#">数字图像处理</a></font>
-				<br><br>
-				<p style = "text-indent:2em;line-height: 1;">
-					数学图像处理主要是由曹老师领队。
-					<br>
-					文字识别主要是由杨华老师领队。
-				</p>
-			</div>
-		</div>
-			<br>
+			<br><br><br>
 			<hr width = "88%">
 			
 		</div>
