--- a/ResearchArea.html
+++ b/ResearchArea.html
@@ -22,48 +22,65 @@
 	<nav>
 		<ul class="menu">
 			<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
-			<li><a href="#"><span class="iconic plus-alt"></span> 教师简介</a>
-				<ul>
-					<li><a href="CaoYongFeng.html">曹永峰</a></li>
-					<li><a href="files/yanghua.pdf">杨华</a></li>
-				</ul>
-			</li>
-			<li><a href="ShareSpace.html"><span class="iconic magnifying-glass"></span> 讨论区</a>
-			</li>
-			<li><a href="#"><span class="iconic map-pin"></span>学生专区</a>
-				<ul>
-					<li><a href="#">宋金阳</a></li>
-					<li><a href="#">刘萍</a></li>
-					<li><a href="#">张巡</a></li>
-					<li><a href="#">汤鑫</a></li>
-					<li><a href="#">黎平</a></li>
-					<li><a href="#">王念洁</a></li>
-				</ul>
-			</li>
-			<li><a href="#"><span class="iconic arrow-right-alt"></span> 研究方向</a>
-				<ul>
-					<li><a href="PictureProcessing.html">图像处理</a></li>
-					<li><a href="wenzi.html">文字识别</a></li>
-				</ul>
-			</li>
-			<li><a href="ReasultShow.html"><span class="iconic move"></span> 成果展示</a>
-					
-				</li>
-				<li><a href="PaperPublishing.html"><span class="iconic pencil"></span> 论文发表</a>
-				<li><a href="news.html"><span class="iconic read-more"></span> 新闻</a>
-				<li><a href="ContactUs.html"><span class="iconic phone"></span> 联系我们</a>
+			<li><a href="TeacherTeam.html"><span class="iconic plus-alt"></span> 教师简介</a></li>
+			<li><a href="ShareSpace.html"><span class="iconic magnifying-glass"></span> 讨论区</a></li>
+			<li><a href="Student.html"><span class="iconic map-pin"></span>学生专区</a></li>
+			<li><a href="ResearchArea.html"><span class="iconic arrow-right-alt"></span> 研究方向</a></li>
+			<li><a href="ReasultShow.html"><span class="iconic move"></span> 成果展示</a></li>
+			<li><a href="PaperPublishing.html"><span class="iconic pencil"></span> 论文发表</a>
+			<li><a href="news.html"><span class="iconic read-more"></span> 新闻</a></li>
+			<li><a href="ContactUs.html"><span class="iconic phone"></span> 联系我们</a></li>
 			</ul>
 			
 		</ul>
 		<div class="clearfix" style ="z-index:-1"></div>
 	</nav>
 	</div>
-	<div style = "height:500px;">
-		<div class = "main11" style = "width:90%;margin-left: auto;margin-right: auto;">
-		<img sur = "#">
-		<hr>
+	
+	<div style = "height:600px;">
+		<div style = "height:80px">
+			<!-- 成果展示的图片 -->
+			<div style = "position:relative;left:9%;float:left;">
+				<img src = "img/CaoYongFeng.jpg" style = "width:100px;float:left;">
+			</div>
+			<!-- 对成果展示的说明 部分 -->
+			<div style = "width:80%;float:right; ">
+				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
+					<a href ="YaoGan.html">遥感图像计算机处理</a>
+				</font>
+				<br><br>
+				
+				<p style = "text-indent:2em;line-height: 1;width:95%;">
+					遥感图像计算机处理与应用，是在计算机系统支持下，以地学分析、信号和图像处理，
+					模式识别与人工智能为主要技术手段，以遥感和测绘得到的数字信号/图像为处理对象，以
+					资源与环境专题信息的自动/半自动分类、提取、检索与监测为主要目地的研究方向。
+				</p>
+			</div>
 		</div>
-	</div>
+			<br><br/><br>
+			<hr width = "88%">
+			
+			<div style = "height:80px">
+			<!-- 成果展示的图片 -->
+			<div style = "position:relative;left:9%;float:left;">
+				<img src = "#" style = "width:100px;float:left;">
+			</div>
+			<!-- 对成果展示的说明 部分 -->
+			<div style = "width:80%;float:right;">
+				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
+				<a href = "wenzi.html">自然语言处理</a>&nbsp;&nbsp;&nbsp;<a href = "wenzi.html">大数据处理与挖掘</a></font>
+				<br><br>
+				<p style = "text-indent:2em;line-height: 1;">
+					<br>
+					文字识别主要是由杨华老师领队。
+				</p>
+			</div>
+		</div>
+			<br><br><br>
+			<hr width = "88%">
+			
+		</div>
+	
 	<div id="footer" style="clear:both;text-align:center;position:relative;bottom:10%">
 		<br>
 		<hr/>
