--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div style = "position:relative;left:10%;top:50px;">
-		<font style = "font-family:华文行楷; font-size:40pt;">新闻</font>
+		<font style = "font-family:楷体; font-size:40pt;">新闻</font>
 	</div>
 
 
@@ -24,36 +24,14 @@
 	<nav>
 		<ul class="menu">
 			<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
-			<li><a href="#"><span class="iconic plus-alt"></span> 教师简介</a>
-				<ul>
-					<li><a href="CaoYongFeng.html">曹永峰</a></li>
-					<li><a href="files/yanghua.pdf">杨华</a></li>
-				</ul>
-			</li>
-			<li><a href="ShareSpace.html"><span class="iconic magnifying-glass"></span> 讨论区</a>
-			</li>
-			<li><a href="#"><span class="iconic map-pin"></span>学生专区</a>
-				<ul>
-					<li><a href="#">宋金阳</a></li>
-					<li><a href="#">刘萍</a></li>
-					<li><a href="#">张巡</a></li>
-					<li><a href="#">汤鑫</a></li>
-					<li><a href="#">黎平</a></li>
-					<li><a href="#">王念洁</a></li>
-				</ul>
-			</li>
-			<li><a href="#"><span class="iconic arrow-right-alt"></span> 研究方向</a>
-				<ul>
-					<li><a href="PictureProcessing.html">图像处理</a></li>
-					<li><a href="wenzi.html">文字识别</a></li>
-				</ul>
-			</li>
-			<li><a href="ReasultShow.html"><span class="iconic move"></span> 成果展示</a>
-					
-				</li>
-				<li><a href="PaperPublishing.html"><span class="iconic pencil"></span> 论文发表</a>
-				<li><a href="news.html"><span class="iconic read-more"></span> 新闻</a>
-				<li><a href="ContactUs.html"><span class="iconic phone"></span> 联系我们</a>
+			<li><a href="TeacherTeam.html"><span class="iconic plus-alt"></span> 教师简介</a></li>
+			<li><a href="ShareSpace.html"><span class="iconic magnifying-glass"></span> 讨论区</a></li>
+			<li><a href="Student.html"><span class="iconic map-pin"></span>学生专区</a></li>
+			<li><a href="ResearchArea.html"><span class="iconic arrow-right-alt"></span> 研究方向</a></li>
+			<li><a href="ReasultShow.html"><span class="iconic move"></span> 成果展示</a></li>
+			<li><a href="PaperPublishing.html"><span class="iconic pencil"></span> 论文发表</a>
+			<li><a href="news.html"><span class="iconic read-more"></span> 新闻</a></li>
+			<li><a href="ContactUs.html"><span class="iconic phone"></span> 联系我们</a></li>
 			</ul>
 			
 		</ul>
