--- a/wenzi.html
+++ b/wenzi.html
@@ -2,8 +2,6 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>自然语言处理</title>
-
 		<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 		<!--  <link rel="stylesheet" href="index.css" media="screen" type="text/css" />-->
 		<meta charset="utf-8">
@@ -11,50 +9,27 @@
 		<link href="style.css" media="screen" rel="stylesheet" type="text/css" />
 		<link href="iconic.css" media="screen" rel="stylesheet" type="text/css" />
 		<script src="prefix-free.js"></script>
-
 </head>
 <body>
 	
 	<div style = "position:relative;left:10%;top:50px;">
-		<font style = "font-family:华文行楷; font-size:40pt;">自然语言处理</font>
+		<font style = "font-family:楷体; font-size:40pt;">研究方向</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:92%">
+	<div class="wrap"  style ="z-index:9999;width:91%">
 	
 	<nav>
 		<ul class="menu">
 			<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
-			<li><a href="#"><span class="iconic plus-alt"></span> 教师简介</a>
-				<ul>
-					<li><a href="CaoYongFeng.html">曹永峰</a></li>
-					<li><a href="files/yanghua.pdf">杨华</a></li>
-				</ul>
-			</li>
-			<li><a href="ShareSpace.html"><span class="iconic magnifying-glass"></span> 讨论区</a>
-			</li>
-			<li><a href="#"><span class="iconic map-pin"></span>学生专区</a>
-				<ul>
-					<li><a href="#">宋金阳</a></li>
-					<li><a href="#">刘萍</a></li>
-					<li><a href="#">张巡</a></li>
-					<li><a href="#">汤鑫</a></li>
-					<li><a href="#">黎平</a></li>
-					<li><a href="#">王念洁</a></li>
-				</ul>
-			</li>
-			<li><a href="#"><span class="iconic arrow-right-alt"></span> 研究方向</a>
-				<ul>
-					<li><a href="PictureProcessing.html">图像处理</a></li>
-					<li><a href="wenzi.html">文字识别</a></li>
-				</ul>
-			</li>
-			<li><a href="ReasultShow.html"><span class="iconic move"></span> 成果展示</a>
-					
-				</li>
-				<li><a href="PaperPublishing.html"><span class="iconic pencil"></span> 论文发表</a>
-				<li><a href="news.html"><span class="iconic read-more"></span> 新闻</a>
-				<li><a href="ContactUs.html"><span class="iconic phone"></span> 联系我们</a>
+			<li><a href="TeacherTeam.html"><span class="iconic plus-alt"></span> 教师简介</a></li>
+			<li><a href="ShareSpace.html"><span class="iconic magnifying-glass"></span> 讨论区</a></li>
+			<li><a href="Student.html"><span class="iconic map-pin"></span>学生专区</a></li>
+			<li><a href="ResearchArea.html"><span class="iconic arrow-right-alt"></span> 研究方向</a></li>
+			<li><a href="ReasultShow.html"><span class="iconic move"></span> 成果展示</a></li>
+			<li><a href="PaperPublishing.html"><span class="iconic pencil"></span> 论文发表</a>
+			<li><a href="news.html"><span class="iconic read-more"></span> 新闻</a></li>
+			<li><a href="ContactUs.html"><span class="iconic phone"></span> 联系我们</a></li>
 			</ul>
 			
 		</ul>
@@ -62,35 +37,29 @@
 	</nav>
 	</div>
 	
-	<!-- 自然语言处理 -->
-	<div style = "width:80%;margin-left: auto;margin-right: auto;">
-			<font style ="font-family:楷体;font-size:30px">
-				自然语言处理
-			</font>
-			<p style = "text-indent:2em;line-height:1.5">
-				自然语言处理是计算机科学领域与人工智能领域中的一个重要方向。它研究能实现人与计算机之间用自然语言进
-				行有效通信的各种理论和方法。自然语言处理是一门融语言学、计算机科学、数学于一体的科学。因此，这一领
-				域的研究将涉及自然语言，即人们日常使用的语言，所以它与语言学的研究有着密切的联系，但又有重要的区别。
-				自然语言处理并不是一般地研究自然语言，而在于研制能有效地实现自然语言通信的计算机系统，特别是其中的
-				软件系统。因而它是计算机科学的一部分。
+	<!-- 正文的主体部分 -->
+	
+	<div style = "height:100%;width:100%">
+		<h2 style = "text-align:center;">自然语言处理&nbsp;&nbsp;&nbsp;大数据处理与挖掘</h2>
+		<div style = "text-align:center;width:80%;margin-left:auto;margin-right:auto; ">
+			<p style = "text-indent:2em;line-height: 2;" align="left">
+				<font style="font-weight:bold;">(1)自然语言处理</font><br/>
+				
+				自然语言处理是计算机科学领域与人工智能领域中的一个重要方向。它研究能实现人与计算机之间用自然语言进行有效通信的各种理论和方法。自然语言处理是一门融语言学、计算机科学、数学于一体的科学。因此，这一领域的研究将涉及自然语言，即人们日常使用的语言，所以它与语言学的研究有着密切的联系，但又有重要的区别。自然语言处理并不是一般地研究自然语言，而在于研制能有效地实现自然语言通信的计算机系统，特别是其中的软件系统。因而它是计算机科学的一部分。
+				自然语言处理（NLP）是计算机科学，人工智能，语言学关注计算机和人类（自然）语言之间的相互作用的领域。
 			</p>
-			<font style ="font-family:楷体;font-size:30px">
-				数据挖掘
-			</font>
-			<p style = "text-indent:2em;line-height:1.5">
-				数据挖掘（英语：Data mining），又译为资料探勘、数据采矿。它是数据库知识发现（英语：Knowle
-				dge-Discovery in Databases，简称：KDD)中的一个步骤。数据挖掘一般是指从大量的数据中通
-				过算法搜索隐藏于其中信息的过程。数据挖掘通常与计算机科学有关，并通过统计、在线分析处理、情报检
-				索、机器学习、专家系统（依靠过去的经验法则）和模式识别等诸多方法来实现上述目标。
+			<p style = "text-indent:2em;line-height: 2;" align="left">
+				<font style="font-weight:bold;">(1)大数据处理与挖掘</font><br/>
+				数据挖掘（英语：Data mining），又译为资料探勘、数据采矿。它是数据库知识发现（英语：Knowledge-Discovery in Databases，简称：KDD)中的一个步骤。数据挖掘一般是指从大量的数据中通过算法搜索隐藏于其中信息的过程。数据挖掘通常与计算机科学有关，并通过统计、在线分析处理、情报检索、机器学习、专家系统（依靠过去的经验法则）和模式识别等诸多方法来实现上述目标。
 			</p>
-			<font style ="font-family:楷体;font-size:30px">
-				机器学习
-			</font>
-			<p style = "text-indent:2em;line-height:1.5">
-				机器学习(Machine Learning, ML)是一门多领域交叉学科，涉及概率论、统计学、逼近论、凸分析、
-				算法复杂度理论等多门学科。专门研究计算机怎样模拟或实现人类的学习行为，以获取新的知识或技能，重
-				新组织已有的知识结构使之不断改善自身的性能。
-			</p>
+		</div>
+	</div>
+	<br><br><br><br><br><br><br><br><br>
+	<div style="clear:both;text-align:center;position:relative;top:95%">
+		<br>
+		<hr/>
+		<font color="black" size="4" >贵州师范大学大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;云计算实验室
+		</font>
 	</div>
 </body>
 </html>
