--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div id="footer" style="clear:both;text-align:center;position:relative;bottom:10%">
 		<br>
 		<hr/>
-		<font color="black" size="4" >贵州师范大学大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;云计算实验室
+	<font color="black" size="3" >贵州师范大学(花溪校区)大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6402云计算实验室
 		</font>
 	</div>
 </body>
