--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 	<div style = "text-align:center;position:relative;top:40px;">
 		<font style = "font-family:楷体; font-size:40pt;"> 智能信息处理实验室</font>
+	<font style = "position:relative;left:18%;top:20px;"><a href = "http://mc.gznu.edu.cn/">学院主页</a></font>
+		<font style = "position:relative;left:20%;top:20px;"><a href = "http://www.gznu.edu.cn/">学校主页</a></font>
 	</div>
 
 
