--- a/TeacherTeam.html
+++ b/TeacherTeam.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 	
-	<div style = "position:relative;left:10%;top:50px;">
+	<div style = "left:20px;top:50px;">
 		<font style = "font-family:楷体; font-size:40pt;">教师团队</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:91%">
+	<div class="wrap"  style ="z-index:9999;width:1200px">
 	
 	<nav>
 		<ul class="menu">
@@ -42,11 +42,11 @@
 	<div style = "height:600px;">
 		<div style = "height:80px">
 			<!-- 成果展示的图片 -->
-			<div style = "position:relative;left:9%;float:left;">
+			<div style = "position:relative;left:80px;float:left;">
 				<img src = "img/CaoYongFeng.jpg" style = "width:100px;float:left;">
 			</div>
 			<!-- 对成果展示的说明 部分 -->
-			<div style = "width:80%;float:right;">
+			<div style = "position:relative;left:130px;width:1000px">
 				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
 					<a href ="CaoYongFeng.html">曹永锋老师</a>
 				</font>
@@ -61,13 +61,13 @@
 			
 			<div style = "height:80px">
 			<!-- 成果展示的图片 -->
-			<div style = "position:relative;left:9%;float:left;">
+			<div style = "position:relative;left:80px;float:left;">
 				<img src = "#" style = "width:100px;float:left;">
 			</div>
 			<!-- 对成果展示的说明 部分 -->
-			<div style = "width:80%;float:right;">
+			<div style = "position:relative;left:130px;width:1000px">
 				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
-				<a href = "#">杨华</a></font>
+				<a href = "#">杨华老师</a></font>
 				<br><br>
 				<p style = "text-indent:2em;line-height: 1;">
 					<br>
@@ -83,7 +83,7 @@
 	<div style="clear:both;text-align:center;position:relative;bottom:10%">
 		<br>
 		<hr/>
-	<font color="black" size="3" >贵州师范大学(花溪校区)大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6402云计算实验室
+		<font color="black" size="4" >贵州师范大学大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;云计算实验室
 		</font>
 	</div>
 </body>
