--- a/TeacherTeam.html
+++ b/TeacherTeam.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 	
-	<div style = "left:20px;top:50px;">
-		<font style = "font-family:楷体; font-size:40pt;">教师团队</font>
+	<div style = "position:relative;left:50px;top:10px;">
+		<font style = "font-family:楷体; font-size:30pt;">教师团队</font>
 	</div>
 
 
