--- a/ShareSpace.html
+++ b/ShareSpace.html
@@ -23,12 +23,12 @@
 
 </head>
 <body>
-	<div style = "position:relative;left:10%;top:50px;">
-		<font style = "font-family:楷体; font-size:40pt;">讨论区</font>
+	<div style = "position:relative;left:50px;">
+		<font style = "font-family:楷体; font-size:30pt;">讨论区</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:91%">
+	<div class="wrap"  style ="z-index:9999;width:1200px">
 	
 	<nav>
 		<ul class="menu">
@@ -48,8 +48,8 @@
 	</nav>
 	</div>
 	
-	<div style = "margin-left:auto;margin-right:auto;width:91%;height:550px;">
-		<div style = "position:relative;left:3%;">
+	<div style = "margin-left:auto;margin-right:auto;width:1200px;height:400px;">
+		<div style = "position:relative;left:30px;">
 			<ol type = "1">
 				<li>
 					<a href = "https://www.baidu.com/">
