--- a/Student.html
+++ b/Student.html
@@ -19,12 +19,12 @@ text-decoration: none;
 </head>
 <body>
 	
-	<div style = "position:relative;left:10%;top:50px;">
-		<font style = "font-family:楷体; font-size:40pt;">学生专区</font>
+	<div style = "position:relative;left:60px;top:10px;">
+		<font style = "font-family:楷体; font-size:30pt;">学生专区</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:91%">
+	<div class="wrap"  style ="z-index:9999;width:1200px">
 	
 	<nav>
 		<ul class="menu">
@@ -47,7 +47,7 @@ text-decoration: none;
 	<!-- 正文的主体部分 -->
 	
 	<div style = "height:100%;width:100%;">
-		<div style = "position:relative;top:-25px;left:10%;width:100%">
+		<div style = "position:relative;top:-10px;left:180px;width:100%">
 			<font style = "font-family:楷体;font-size:30px">
 				在校学生
 			</font>
