--- a/ResearchArea.html
+++ b/ResearchArea.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 	
-	<div style = "position:relative;left:10%;top:40px;">
-		<font style = "font-family:楷体; font-size:40pt;"> 研究方向</font>
+	<div style = "position:relative;left:60px;top:-5px;">
+		<font style = "font-family:楷体; font-size:30pt;"> 研究方向</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:91%">
+	<div class="wrap"  style ="z-index:9999;width:1200px">
 	
 	<nav>
 		<ul class="menu">
@@ -40,11 +40,11 @@
 	<div style = "height:600px;">
 		<div style = "height:80px">
 			<!-- 成果展示的图片 -->
-			<div style = "position:relative;left:9%;float:left;">
+			<div style = "position:relative;left:80px;float:left;">
 				<img src = "img/CaoYongFeng.jpg" style = "width:100px;float:left;">
 			</div>
 			<!-- 对成果展示的说明 部分 -->
-			<div style = "width:80%;float:right; ">
+			<div style = "position:relative;left:130px;width:1000px ">
 				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
 					<a href ="YaoGan.html">遥感图像计算机处理</a>
 				</font>
@@ -62,11 +62,11 @@
 			
 			<div style = "height:80px">
 			<!-- 成果展示的图片 -->
-			<div style = "position:relative;left:9%;float:left;">
+			<div style = "position:relative;left:80px;float:left;">
 				<img src = "#" style = "width:100px;float:left;">
 			</div>
 			<!-- 对成果展示的说明 部分 -->
-			<div style = "width:80%;float:right;">
+			<div style = "position:relative;left:130px;width:1000px">
 				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
 				<a href = "wenzi.html">自然语言处理</a>&nbsp;&nbsp;&nbsp;<a href = "wenzi.html">大数据处理与挖掘</a></font>
 				<br><br>
@@ -84,7 +84,7 @@
 	<div id="footer" style="clear:both;text-align:center;position:relative;bottom:10%">
 		<br>
 		<hr/>
-		<font color="black" size="3" >贵州师范大学(花溪校区)大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6402云计算实验室
+		<font color="black" size="4" >贵州师范大学大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;云计算实验室
 		</font>
 	</div>
 </body>
