--- a/ReasultShow.html
+++ b/ReasultShow.html
@@ -12,12 +12,11 @@
 </head>
 <body>
 	
-	<div style = "position:relative;left:10%;top:50px;">
-		<font style = "font-family:楷体; font-size:40pt;">成果展示</font>
+	<div style = "position:relative;left:60px;top:-5px;">
+		<font style = "font-family:楷体; font-size:30pt;">成果展示</font>
 	</div>
 
-
-	<div class="wrap"  style ="z-index:9999;width:91%">
+	<div class="wrap"  style ="z-index:9999;width:1200px">
 	
 	<nav>
 		<ul class="menu">
@@ -42,14 +41,14 @@
 	<div style = "height:600px;">
 		<div style = "height:80px">
 			<!-- 成果展示的图片 -->
-			<div style = "width:20%;position:relative;left:9%;float:left;">
+			<div style = "position:relative;left:120px;float:left;">
 				<img src = "img/shiyan.png" style = "width:100px;float:left;">
 			</div>
 			<!-- 对成果展示的说明 部分 -->
-			<div style = "width:80%;float:right;">
+			<div style = "position:relative;left:200px;width:1000px ">
 				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
 				<a href = "#">数字图像处理</a></font>
-				<br><br>
+				<br>
 				<p style = "text-indent:2em;line-height: 1;">
 					数学图像处理主要是由曹老师领队。
 					<br>
@@ -62,14 +61,14 @@
 			
 			<div style = "height:80px">
 			<!-- 成果展示的图片 -->
-			<div style = "width:20%;position:relative;left:9%;float:left;">
+			<div style = "position:relative;left:120px;float:left;">
 				<img src = "img/shiyan.png" style = "width:100px;float:left;">
 			</div>
 			<!-- 对成果展示的说明 部分 -->
-			<div style = "width:80%;float:right;">
+			<div style = "position:relative;left:200px;width:1000px ">
 				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
 				<a href = "#">数字图像处理</a></font>
-				<br><br>
+				<br>
 				<p style = "text-indent:2em;line-height: 1;">
 					数学图像处理主要是由曹老师领队。
 					<br>
@@ -81,16 +80,16 @@
 			<hr width = "88%">
 			
 			
-			<div style = "height:80px">
+		<div style = "height:80px">
 			<!-- 成果展示的图片 -->
-			<div style = "width:20%;position:relative;left:9%;float:left;">
+			<div style = "position:relative;left:120px;float:left;">
 				<img src = "img/shiyan.png" style = "width:100px;float:left;">
 			</div>
 			<!-- 对成果展示的说明 部分 -->
-			<div style = "width:80%;float:right;">
+			<div style = "position:relative;left:200px;width:1000px ">
 				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
 				<a href = "#">数字图像处理</a></font>
-				<br><br>
+				<br>
 				<p style = "text-indent:2em;line-height: 1;">
 					数学图像处理主要是由曹老师领队。
 					<br>
@@ -106,7 +105,7 @@
 	<div style="clear:both;text-align:center;position:relative;bottom:10%">
 		<br>
 		<hr/>
-	<font color="black" size="3" >贵州师范大学(花溪校区)大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6402云计算实验室
+		<font color="black" size="4" >贵州师范大学大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;云计算实验室
 		</font>
 	</div>
 </body>
