--- a/PaperPublishing.html
+++ b/PaperPublishing.html
@@ -14,12 +14,12 @@
 
 </head>
 <body>
-	<div style = "position:relative;left:10%;top:50px;">
+	<div style = "position:relative;left:10%;top:40px;">
 		<font style = "font-family:楷体; font-size:40pt;">论文发表</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:91%">
+	<div class="wrap"  style ="z-index:9999;width:1200px">
 	
 	<nav>
 		<ul class="menu">
@@ -35,7 +35,7 @@
 			</ul>
 			
 		</ul>
-		<div class="clearfix" style ="z-index:-1"></div>
+		
 	</nav>
 	</div>
 	
