--- a/PaperPublishing.html
+++ b/PaperPublishing.html
@@ -20,7 +20,6 @@
 
 
 	<div class="wrap"  style ="z-index:9999;width:1200px">
-	
 	<nav>
 		<ul class="menu">
 			<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
@@ -41,7 +40,7 @@
 	
 	<!-- 正文主体部分 -->
 	
-	<div style = "width:85%;height:600px;text-align:center;margin-left: auto;margin-right: auto;">
+	<div style = "width:1200px;height:600px;text-align:center;margin-left: auto;margin-right: auto;">
 		<table width = "100%">
 		
 		<!--  <tr style = "width:100%;height:40px;">
