--- a/CaoYongFeng.html
+++ b/CaoYongFeng.html
@@ -30,12 +30,12 @@
 
 <body class="wiki-lemma normal">
 
-	<div style = "text-align:center;position:relative;top:40px;">
-		<font style = "font-family:楷体; font-size:40pt;">教师简介—曹永锋</font>
+	<div style = "position:relative;left:80px;top:10px;">
+		<font style = "font-family:楷体; font-size:30pt;">教师简介—曹永锋</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:91%">
+	<div class="wrap" style ="z-index:9999;width:1200px">
 	
 	<nav>
 		<ul class="menu">
