--- a/ContactUs.html
+++ b/ContactUs.html
@@ -15,13 +15,12 @@
 </head>
 <body>
 	
-	<div style = "position:relative;left:10%;top:50px;">
-		<font style = "font-family:楷体; font-size:40pt;">联系我们</font>
+<div style = "position:relative;left:80px;top:10px;">
+		<font style = "font-family:楷体; font-size:30pt;"> 联系我们</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:91%">
-	
+	<div class="wrap"  style ="z-index:9999;width:1200px">
 	<nav>
 		<ul class="menu">
 			<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
@@ -40,7 +39,7 @@
 	</nav>
 	</div>
 	
-	<div style = "margin-left:auto;margin-right:auto;width:91%;height:550px;text-align:center">
+	<div style = "margin-left:auto;margin-right:auto;width:1200px;height:550px;text-align:center">
 		<div style = "position:relative;left:3%;">
 			<font style = "font-size:25px">智能信息处理实验室</font>
 			<br>
