--- a/news.html
+++ b/news.html
@@ -14,13 +14,12 @@
 
 </head>
 <body>
-	<div style = "position:relative;left:10%;top:50px;">
-		<font style = "font-family:楷体; font-size:40pt;">新闻</font>
+<div style = "position:relative;left:80px;top:10px;">
+		<font style = "font-family:楷体; font-size:30pt;"> 新闻</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:91%">
-	
+	<div class="wrap"  style ="z-index:9999;width:1200px">
 	<nav>
 		<ul class="menu">
 			<li><a href="index.html"><span class="iconic home"></span> 首页</a></li>
@@ -39,11 +38,11 @@
 	</nav>
 	</div>
 	
-	<div style = "width:100%;margin-left:auto; margin-right:auto">
-		<div style = "width:26.5%;position:relative;left:7%;float:left;background-color:red">
+	<div style = "width:1200px;margin-left:auto; margin-right:auto">
+		<div style = "width:26.5%;position:relative;left:7%;float:left;">
 			<img src = "img/baby.jpg" >
 		</div>
-		<div style = "float:right;position:relative;left:-6%;line-height: 1.5;">
+		<div style = "float:right;position:relative;line-height: 1.5;">
 			<font style = "font-size:30px;font-family:楷体;">新闻</font>
 			<br>
 			<ul>
