--- a/PaperPublishing.html
+++ b/PaperPublishing.html
@@ -14,10 +14,9 @@
 
 </head>
 <body>
-	<div style = "position:relative;left:10%;top:40px;">
-		<font style = "font-family:楷体; font-size:40pt;">论文发表</font>
+<div style = "position:relative;left:80px;top:10px;">
+		<font style = "font-family:楷体; font-size:30pt;"> 论文发表</font>
 	</div>
-
 
 	<div class="wrap"  style ="z-index:9999;width:1200px">
 	<nav>
