--- a/ReasultShow.html
+++ b/ReasultShow.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	
-	<div style = "position:relative;left:60px;top:-5px;">
+<div style = "position:relative;left:80px;top:10px;">
 		<font style = "font-family:楷体; font-size:30pt;">成果展示</font>
 	</div>
 
@@ -46,10 +46,10 @@
 			</div>
 			<!-- 对成果展示的说明 部分 -->
 			<div style = "position:relative;left:200px;width:1000px ">
-				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
+				<font style = "font-size:20px;font-family:宋体;line-height: 1.5;">
 				<a href = "#">数字图像处理</a></font>
 				<br>
-				<p style = "text-indent:2em;line-height: 1;">
+				<p style = "text-indent:2em;line-height: 1.5;">
 					数学图像处理主要是由曹老师领队。
 					<br>
 					文字识别主要是由杨华老师领队。
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 			<br>
-			<hr width = "88%">
+			<hr width = "1150px">
 			
 			<div style = "height:80px">
 			<!-- 成果展示的图片 -->
@@ -66,10 +66,10 @@
 			</div>
 			<!-- 对成果展示的说明 部分 -->
 			<div style = "position:relative;left:200px;width:1000px ">
-				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
+				<font style = "font-size:20px;font-family:宋体;line-height: 1.5;">
 				<a href = "#">数字图像处理</a></font>
 				<br>
-				<p style = "text-indent:2em;line-height: 1;">
+				<p style = "text-indent:2em;line-height: 1.5;">
 					数学图像处理主要是由曹老师领队。
 					<br>
 					文字识别主要是由杨华老师领队。
@@ -77,7 +77,7 @@
 			</div>
 		</div>
 			<br>
-			<hr width = "88%">
+			<hr width = "1150px">
 			
 			
 		<div style = "height:80px">
@@ -87,10 +87,10 @@
 			</div>
 			<!-- 对成果展示的说明 部分 -->
 			<div style = "position:relative;left:200px;width:1000px ">
-				<font style = "font-size:20px;font-family:宋体;line-height: 1;">
+				<font style = "font-size:20px;font-family:宋体;line-height: 1.5;">
 				<a href = "#">数字图像处理</a></font>
 				<br>
-				<p style = "text-indent:2em;line-height: 1;">
+				<p style = "text-indent:2em;line-height: 1.5;">
 					数学图像处理主要是由曹老师领队。
 					<br>
 					文字识别主要是由杨华老师领队。
@@ -98,13 +98,13 @@
 			</div>
 		</div>
 			<br>
-			<hr width = "88%">
+			<hr width = "1150px">
 			
 		</div>
 	
 	<div style="clear:both;text-align:center;position:relative;bottom:10%">
 		<br>
-		<hr/>
+		<hr width = "1150px">
 		<font color="black" size="4" >贵州师范大学大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;云计算实验室
 		</font>
 	</div>
