--- a/ResearchArea.html
+++ b/ResearchArea.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	
-	<div style = "position:relative;left:60px;top:-5px;">
+<div style = "position:relative;left:80px;top:10px;">
 		<font style = "font-family:楷体; font-size:30pt;"> 研究方向</font>
 	</div>
 
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 			<br><br/><br>
-			<hr width = "88%">
+			<hr width = "1150px">
 			
 			<div style = "height:80px">
 			<!-- 成果展示的图片 -->
@@ -77,7 +77,7 @@
 			</div>
 		</div>
 			<br><br><br>
-			<hr width = "88%">
+			<hr width = "1150px">
 			
 		</div>
 	
