--- a/ShareSpace.html
+++ b/ShareSpace.html
@@ -23,7 +23,7 @@
 
 </head>
 <body>
-	<div style = "position:relative;left:50px;">
+	<div style = "position:relative;left:80px;top:10px;">
 		<font style = "font-family:楷体; font-size:30pt;">讨论区</font>
 	</div>
 
