--- a/Student.html
+++ b/Student.html
@@ -19,7 +19,7 @@ text-decoration: none;
 </head>
 <body>
 	
-	<div style = "position:relative;left:60px;top:10px;">
+<div style = "position:relative;left:80px;top:10px;">
 		<font style = "font-family:楷体; font-size:30pt;">学生专区</font>
 	</div>
 
@@ -46,7 +46,7 @@ text-decoration: none;
 	
 	<!-- 正文的主体部分 -->
 	
-	<div style = "height:100%;width:100%;">
+	<div style = "height:100%;width:1200px;">
 		<div style = "position:relative;top:-10px;left:180px;width:100%">
 			<font style = "font-family:楷体;font-size:30px">
 				在校学生
@@ -54,10 +54,10 @@ text-decoration: none;
 		</div>
 		<table width=80% height=100px border=0 align=center cellpadding=0 cellspacing=0>
 			<tr>
-				<td width=20% align=center height=50px>
+				<td width=10% align=center height=50px>
 					2013级
 				</td>
-				<td width = 80% align = center>
+				<td width = 90% align = center>
 					<a href = "#">范郁峰</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href = "#">黄志洋</a>
