--- a/TeacherTeam.html
+++ b/TeacherTeam.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	
-	<div style = "position:relative;left:50px;top:10px;">
+<div style = "position:relative;left:80px;top:10px;">
 		<font style = "font-family:楷体; font-size:30pt;">教师团队</font>
 	</div>
 
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 			<br><br/><br>
-			<hr width = "88%">
+			<hr width = "1150px">
 			
 			<div style = "height:80px">
 			<!-- 成果展示的图片 -->
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 			<br><br><br>
-			<hr width = "88%">
+			<hr width = "1150px">
 			
 		</div>
 	
