--- a/Teams.html
+++ b/Teams.html
@@ -13,7 +13,10 @@
 
 </head>
 <body>
-	<font style = "font-family:楷体; font-size:30pt;position:relative;left:40pt;top:40px">实验室成员</font>
+	<div style = "position:relative;left:80px;top:10px;">
+		<font style = "font-family:楷体; font-size:30pt;">实验室成员</font>
+	</div>	
+		
 	<div class="wrap"  style ="z-index:9999;width:91%">
 	
 	<nav>
