--- a/YaoGan.html
+++ b/YaoGan.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 	
-	<div style = "position:relative;left:10%;top:50px;">
-		<font style = "font-family:楷体; font-size:40pt;">研究方向</font>
+	<div style = "position:relative;left:80px;top:10px;">
+		<font style = "font-family:楷体; font-size:30pt;">研究方向</font>
 	</div>
 
 
-	<div class="wrap"  style ="z-index:9999;width:91%">
+	<div class="wrap"  style ="z-index:9999;width:1200px">
 	
 	<nav>
 		<ul class="menu">
@@ -39,7 +39,7 @@
 	
 	<!-- 正文的主体部分 -->
 	
-	<div style = "height:100%;width:100%">
+	<div style = "height:100%;width:1300px">
 		<h2 style = "text-align:center;">遥感图像计算机处理与解译</h2>
 		<div style = "text-align:center;width:80%;margin-left:auto;margin-right:auto; ">
 			<p style = "text-indent:2em;line-height: 2;" align="left">
