--- a/ShareSpace.html
+++ b/ShareSpace.html
@@ -60,5 +60,12 @@
 		</div>
 	</div>
 	
+		<div id="footer" style="clear:both;text-align:center;position:relative;bottom:10%">
+		<br>
+		<hr style = "width:1150px">
+		<font color="black" size="3" >贵州师范大学(花溪校区)大数据与计算机科学学院  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6402云计算实验室
+		</font>
+	</div>
+	
 </body>
 </html>
