--- a/Student.html
+++ b/Student.html
@@ -46,7 +46,7 @@ text-decoration: none;
 	
 	<!-- 正文的主体部分 -->
 	
-	<div style = "height:100%;width:1200px;">
+	<div style = "height:500px;width:1200px;">
 		<div style = "position:relative;top:-10px;left:180px;width:100%">
 			<font style = "font-family:楷体;font-size:30px">
 				在校学生
